# diplom_project_ui_mobile

./: .env.credentials  .env.local_emulator  .gitignore  README.md  config.py  conftest.py  pyproject.toml
allure-results/: 097e2510-124d-44e8-bece-47828906eafc-result.json  0caf587b-bc69-41ab-9723-49386efbf6c5-result.json  0fa11053-2607-4a04-8940-05f821aec769-container.json  11bbd5ed-63ce-4916-91f5-c7e3d9dcc3b3-container.json  13d2b22c-e900-4394-89e9-70a7e1ec4686-container.json  172975a0-5e68-4796-ad78-632763a5d604-container.json  1a816dc8-17fc-4703-b905-76daf2d4bd59-container.json  2107a855-6c18-45af-987a-831b5a3dd252-attachment.html  2aeff07a-6075-42cf-9b23-7f02c1f9150f-container.json  3234f2dd-4de5-443d-8c27-13c71664de05-attachment.html  348224ac-625e-4e71-a4f5-a632425c7844-container.json  399cefc6-bc4c-4423-816c-7d4a027274c5-attachment.html  3dbfaad0-a5e1-40f1-8c0d-a73e88d7ff7d-container.json  57e55f97-636a-48cc-895a-bd1e0ed81ede-container.json  5aefea67-9f0a-4b0b-8a4e-a28235624fbe-container.json  5c7c2a47-0ed7-44cc-be4f-86e0b03fcefe-container.json  665c7fec-aa50-4536-9ba2-843943d2cd60-container.json  74835f89-2c87-499a-aa8f-f7a3b9a2f78f-attachment.html  74c1411f-cfc8-43bf-af12-059edda140cc-attachment.html  8a91baa6-8176-4cb8-9d0a-c692313928a0-attachment.html  9472fc83-60c5-4c7f-9252-188115d4495b-attachment.html  95643553-b5d4-4636-a2ee-a3e6f765396b-container.json  9b9249c5-418f-4239-816c-a26aeb2033d7-result.json  9df9bfe9-7f85-4f3d-ae79-c98fa7a70040-attachment.html  aaea2b73-3aed-4b28-950e-79799226d391-result.json  ad2aa8ea-c4a1-4c70-b021-3f857631d547-container.json  (+18 more)
(+21 files in other folders)
